Prevent too wide fixed sidebar in application review

--- a/resources/less/virkailija-application.less
+++ b/resources/less/virkailija-application.less
@@ -420,6 +420,7 @@ and (max-width: 1000px) {
 .application-handling__review-state-row-hakukohde {
   width: 100%;
   padding-left: 30px;
+  max-width: 500px;
 }
 
 .application-handling__review-state-row-hakukohde--single-option {
